use fixed width. font weight changes can update the width, which causes positioned elements to become misaligned on edge.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/EbrcWebsiteCommon/trunk@86795 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/question-wizard.css
+++ b/Site/webapp/wdkCustomization/css/question-wizard.css
@@ -206,8 +206,7 @@ button.ebrc-QuestionWizardParamGroupButton {
   border-radius: 5px;
   color: #333;
   min-height: 3em;
-  max-width: 9em;
-  min-width: 4em;
+  width: 9em;
   overflow-x: hidden;
   padding: 0 1em;
   text-overflow: ellipsis;
